--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link   rel="preload" 
+            href="fonts/7fc863b760df2a3b-s.p.woff" 
+            as="font" 
+            type="font/woff" 
+            crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>new-year-2022</title>
   </head>
